--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <title>Project Name</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="src/css/reset.css" />
   <link rel="stylesheet" href="src/css/grid.css" />
   <link rel="stylesheet" href="src/css/style.css" />
@@ -14,13 +16,34 @@
 <body>
   <!-- BEGIN HEADER -->
   <header id="header" class="main_header">
-    <div class="headerWrap"></div>
+    <div class="container">
+      <div class="headerWrap">
+        <ul class="header_nav">
+          <li>Works</li>
+          <li>Services</li>
+          <li>Contacts</li>
+        </ul>
+      </div>
+    </div>
   </header>
   <!-- END HEADER -->
   <!-- BEGIN MAIN -->
   <main id="main" class="main_content">
     <div class="mainWrap">
-
+      <section class="patagonia_section">
+        <div class="container">
+          <div class="patagonia_wrapper">
+            <div class="patagonia_content">
+              <h2>Patagonia</h2>
+              <p>Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend lacus, vitae
+                ullamcor.</p>
+            </div>
+            <div class="patagonia_photo">
+              <img src="src/images/Image.png" alt="image">
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </main>
   <!-- END MAIN -->
